feat: add ujson validations to primitives

--- a/.codeloops/missing-validations/tasks.json
+++ b/.codeloops/missing-validations/tasks.json
@@ -1,13 +1,13 @@
 {
   "metadata": {
     "created": "2025-07-13T19:52:00.000Z",
-    "updated": "2025-07-13T19:52:00.000Z", 
-    "version": "1.0.0",
+    "updated": "2025-07-13T20:58:00.000Z", 
+    "version": "2.0.0",
     "featureName": "missing-validations"
   },
   "contextAnalysis": {
     "problemDefinition": "ScalaSchemaz (Chez) library has incomplete validation infrastructure preventing production adoption. Core JSON Schema validation functionality is missing across multiple layers: web request validation (CaskChez), complex schema types (ObjectChez, composition schemas), and schema-driven data validation.",
-    "technicalApproach": "5-phase implementation strategy using Scala 3.6.2 with ujson.Value validation, ValidationResult/ValidationError types, and integration with existing Chez trait architecture. Maintains JSON Schema 2020-12 compliance without breaking existing APIs.",
+    "technicalApproach": "✅ UPDATED: Direct validation implementation in each Chez type using Scala 3.6.2 with ujson.Value validation, ValidationResult/ValidationError types. Eliminated redundant ValidationEngine for cleaner architecture. Maintains JSON Schema 2020-12 compliance without breaking existing APIs.",
     "codebasePatterns": "Mill build system, utest framework, Mirror-based schema derivation, functional programming patterns, trait-based inheritance hierarchy for schema types, ujson.Value for JSON representation, companion object factory methods",
     "externalDocs": "Comprehensive Makefile for build/test automation, JSON Schema 2020-12 specification compliance required, existing TODO comments indicate specific missing validation implementations"
   },
@@ -26,46 +26,46 @@
       },
       "fileStructureChanges": {
         "newFiles": [
-          "Chez/src/main/scala/chez/validation/ValidationResult.scala",
-          "Chez/src/main/scala/chez/validation/ValidationContext.scala",
-          "Chez/src/main/scala/chez/validation/ValidationEngine.scala"
+          "✅ Chez/src/main/scala/chez/validation/ValidationResult.scala",
+          "✅ Chez/src/main/scala/chez/validation/ValidationContext.scala",
+          "❌ ValidationEngine.scala (removed - was redundant)"
         ],
         "modifiedFiles": [
-          "Chez/src/main/scala/chez/Chez.scala",
+          "✅ Chez/src/main/scala/chez/Chez.scala",
           "Chez/src/main/scala/chez/ChezType.scala"
         ],
         "movedFiles": []
       },
       "implementationDetails": {
         "files": [
-          "Chez/src/main/scala/chez/validation/ValidationResult.scala",
-          "Chez/src/main/scala/chez/validation/ValidationContext.scala", 
-          "Chez/src/main/scala/chez/validation/ValidationEngine.scala",
-          "Chez/src/main/scala/chez/Chez.scala"
+          "✅ Chez/src/main/scala/chez/validation/ValidationResult.scala",
+          "✅ Chez/src/main/scala/chez/validation/ValidationContext.scala", 
+          "❌ ValidationEngine.scala (removed)",
+          "✅ Chez/src/main/scala/chez/Chez.scala"
         ],
         "functions": [
-          "ValidationResult.valid()",
-          "ValidationResult.invalid(List[ValidationError])",
-          "ValidationContext(path: String, rootSchema: Option[Chez])",
-          "Chez.validate(value: ujson.Value): ValidationResult",
-          "Chez.validateAtPath(value: ujson.Value, path: String): ValidationResult"
+          "✅ ValidationResult.valid()",
+          "✅ ValidationResult.invalid(List[ValidationError])",
+          "✅ ValidationContext(path: String, rootSchema: Option[Chez])",
+          "✅ Chez.validate(value: ujson.Value, context: ValidationContext): ValidationResult",
+          "✅ Direct validation in each primitive type"
         ],
         "apiEndpoints": [],
         "databaseChanges": []
       },
-      "technicalSpecifications": "sealed trait ValidationResult with isValid: Boolean and errors: List[ValidationError]. case class ValidationContext for path tracking. Add validate methods to Chez trait using default implementations that delegate to ValidationEngine.validate",
+      "technicalSpecifications": "✅ UPDATED: sealed trait ValidationResult with isValid: Boolean and errors: List[ValidationError]. case class ValidationContext for path tracking. Abstract validate method in Chez trait implemented directly by each schema type. Eliminated ValidationEngine redundancy.",
       "implementationConstraints": ["Must not break existing Chez trait API", "Must maintain ujson.Value compatibility", "Must preserve existing ValidationError enum structure", "No changes to schema generation functionality"],
       "externalDependencies": ["ujson for Value types", "existing chez.ValidationError enum"],
       "integrationPoints": ["All existing Chez implementations", "ChezType.ValidationError enum", "ujson.Value type system"],
       "acceptanceCriteria": [
-        "ValidationResult type exists with valid/invalid states",
-        "ValidationContext tracks JSON paths correctly",
-        "Chez trait has validate and validateAtPath methods", 
-        "ValidationEngine provides central validation orchestration",
-        "All primitive types can use validation framework",
-        "Error paths are properly tracked during recursive validation"
+        "✅ ValidationResult type exists with valid/invalid states",
+        "✅ ValidationContext tracks JSON paths correctly",
+        "✅ Chez trait has abstract validate method", 
+        "✅ All primitive types implement validation directly",
+        "✅ All primitive types can use validation framework",
+        "✅ Error paths are properly tracked during validation"
       ],
-      "successDefinition": "Core validation infrastructure is in place and all Chez types can implement validation using the unified framework",
+      "successDefinition": "✅ COMPLETED: Core validation infrastructure is in place and all primitive Chez types implement validation using the unified framework",
       "outOfScope": ["Actual validation logic for specific types", "CaskChez integration", "Performance optimizations", "Custom error messages"],
       "dependencies": [],
       "createdDate": "2025-07-13T19:52:00.000Z",
@@ -76,7 +76,7 @@
       "title": "Implement StringChez Validation Enhancement",
       "description": "Complete ujson.Value validation for StringChez by adding validate method and integrating with validation framework",
       "priority": "P0",
-      "status": "pending", 
+      "status": "completed", 
       "userStory": "As a data processing developer, I want string validation against StringChez schemas, so that string data is properly validated for length, pattern, format, and const constraints",
       "levelOfEffort": 2,
       "contextAnalysis": {
@@ -89,10 +89,10 @@
         "movedFiles": []
       },
       "implementationDetails": {
-        "files": ["Chez/src/main/scala/chez/primitives/StringChez.scala"],
+        "files": ["✅ Chez/src/main/scala/chez/primitives/StringChez.scala"],
         "functions": [
-          "validate(value: ujson.Value): ValidationResult",
-          "validate(value: ujson.Value, context: ValidationContext): ValidationResult"
+          "✅ validate(value: ujson.Value): ValidationResult",
+          "✅ validate(value: ujson.Value, context: ValidationContext): ValidationResult"
         ],
         "apiEndpoints": [],
         "databaseChanges": []
@@ -102,18 +102,18 @@
       "externalDependencies": ["ujson.Value types", "ValidationResult from T1", "ValidationContext from T1"],
       "integrationPoints": ["Core validation framework from T1", "Existing StringChez functionality", "ValidationError enum"],
       "acceptanceCriteria": [
-        "StringChez validates ujson.Str values correctly",
-        "StringChez rejects non-string ujson.Value types with TypeMismatch error",
-        "All existing validation logic (length, pattern, format, const) works with ujson.Value", 
-        "Error paths are correctly set using ValidationContext",
-        "ValidationResult is returned with proper valid/invalid state",
-        "Existing validate(String) method continues to work unchanged"
+        "✅ StringChez validates ujson.Str values correctly",
+        "✅ StringChez rejects non-string ujson.Value types with TypeMismatch error",
+        "✅ All existing validation logic (length, pattern, format, const) works with ujson.Value", 
+        "✅ Error paths are correctly set using ValidationContext",
+        "✅ ValidationResult is returned with proper valid/invalid state",
+        "✅ Existing validate(String) method continues to work unchanged"
       ],
-      "successDefinition": "StringChez can validate ujson.Value data against all string constraints and return proper ValidationResult with path-aware errors",
+      "successDefinition": "✅ COMPLETED: StringChez can validate ujson.Value data against all string constraints and return proper ValidationResult with path-aware errors",
       "outOfScope": ["New validation constraints", "Custom format validation", "Performance optimizations", "Validation caching"],
       "dependencies": ["T1"],
       "createdDate": "2025-07-13T19:52:00.000Z",
-      "updatedDate": "2025-07-13T19:52:00.000Z"
+      "updatedDate": "2025-07-13T20:29:00.000Z"
     },
     {
       "id": "T3",
