--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,9 +1,49 @@
-//
-// Scalafmt Configuration: https://scalameta.org/scalafmt/docs/configuration.html
-//
-version = 3.8.1
-runner.dialect = scala3
-preset = defaultWithAlign
-maxColumn = 130
-align.preset = some
-docstrings.style = Asterisk
+
+version = "3.8.5"        # keep the formatter itself current
+
+## Language
+runner.dialect = scala3  # 3-syntax everywhere unless overridden
+
+## Alignment – minimal on purpose
+align {
+  preset = none          # no vertical “tower” alignment → cleaner diffs
+  openParenCallSite = false
+  stripMargin = true
+}
+assumeStandardLibraryStripMargin = true
+
+## Line length
+maxColumn = 100
+
+## Indentation
+continuationIndent {
+  callSite = 2           # method-call chains
+  defnSite = 4           # defs/param lists
+}
+
+## Newlines & spacing
+newlines.source = keep 
+
+## Scaladoc / KDoc
+docstrings {
+  style   = Asterisk     # /** ... */
+  oneline = keep
+  wrap    = no           # manual wrapping > auto
+}
+
+## Repo hygiene
+project {
+  git = true             # obey .gitignore
+  excludePaths = [
+    "glob:**/target/**",
+    "glob:**/out/**",
+    "glob:**/node_modules/**",
+    "glob:**/generated/**",
+    "glob:**/*.generated.scala"
+  ]
+}
+
+## File-specific tweaks (example)
+fileOverride {
+  "glob:**/build.sc" { docstrings.style = keep }   # leave Mill scripts alone
+}
