chore: remove legacy handlers

--- a/.codeloops/missing-validations/tasks.json
+++ b/.codeloops/missing-validations/tasks.json
@@ -120,7 +120,7 @@
       "title": "Implement Primitive Type Validation Suite",
       "description": "Complete ujson.Value validation for NumberChez, IntegerChez, BooleanChez, NullChez, and EnumChez",
       "priority": "P0", 
-      "status": "pending",
+      "status": "completed",
       "userStory": "As a data processing developer, I want all primitive types to validate ujson.Value data, so that numeric, boolean, null, and enum constraints are properly enforced",
       "levelOfEffort": 5,
       "contextAnalysis": {
@@ -170,7 +170,7 @@
         "Range violations return appropriate ValidationError types",
         "ValidationResult framework is used consistently across all types"
       ],
-      "successDefinition": "All primitive Chez types can validate ujson.Value data against their constraints and return proper ValidationResult with detailed error information",
+      "successDefinition": "✅ COMPLETED: All primitive Chez types can validate ujson.Value data against their constraints and return proper ValidationResult with detailed error information",
       "outOfScope": ["Complex format validation", "Custom numeric formats", "Locale-specific validation", "Performance optimizations"],
       "dependencies": ["T1", "T2"],
       "createdDate": "2025-07-13T19:52:00.000Z",
