feat: add ArrayChez validation
- add AnyOfChezTests
- add OneOfChezTests

--- a/.codeloops/missing-validations/tasks.json
+++ b/.codeloops/missing-validations/tasks.json
@@ -358,7 +358,7 @@
       "title": "Implement ArrayChez Item Validation",
       "description": "Complete array validation implementation with item schema validation, array constraints, and tuple validation support",
       "priority": "P0",
-      "status": "pending",
+      "status": "completed",
       "userStory": "As a data processing developer, I want array validation against item schemas, so that JSON arrays are validated with proper item constraints and array-level rules",
       "levelOfEffort": 5,
       "contextAnalysis": {
@@ -414,15 +414,15 @@
         "Recursive validation for array items"
       ],
       "acceptanceCriteria": [
-        "ArrayChez validates ujson.Arr against item schemas",
-        "Array length constraints (minItems, maxItems) are enforced",
-        "uniqueItems constraint prevents duplicate values",
-        "prefixItems enables tuple validation with different schemas per position",
-        "Array item errors include proper index paths (e.g., '/items/0/name')",
-        "Non-array ujson.Value types are rejected with TypeMismatch",
-        "Empty arrays are handled correctly with constraints"
+        "✅ ArrayChez validates ujson.Arr against item schemas",
+        "✅ Array length constraints (minItems, maxItems) are enforced",
+        "✅ uniqueItems constraint prevents duplicate values",
+        "✅ prefixItems enables tuple validation with different schemas per position",
+        "✅ Array item errors include proper index paths (e.g., '/items/0/name')",
+        "✅ Non-array ujson.Value types are rejected with TypeMismatch",
+        "✅ Empty arrays are handled correctly with constraints"
       ],
-      "successDefinition": "ArrayChez can validate JSON arrays against item schemas with full array constraint checking and proper index-based error reporting",
+      "successDefinition": "✅ COMPLETED: ArrayChez can validate JSON arrays against item schemas with full array constraint checking, tuple validation with prefixItems, contains validation, and proper index-based error reporting",
       "outOfScope": [
         "Array sorting validation",
         "Array relationship validation",
@@ -443,7 +443,7 @@
       "title": "Implement AnyOf and OneOf Composition Validation",
       "description": "Complete validation implementation for AnyOfChez and OneOfChez to handle union type validation",
       "priority": "P1",
-      "status": "pending",
+      "status": "completed",
       "userStory": "As a data processing developer, I want union type validation with AnyOf and OneOf, so that variant data structures are correctly validated against multiple schema alternatives",
       "levelOfEffort": 5,
       "contextAnalysis": {
@@ -498,14 +498,14 @@
         "Composition pattern for complex schemas"
       ],
       "acceptanceCriteria": [
-        "AnyOfChez validates if at least one schema alternative succeeds",
-        "OneOfChez validates if exactly one schema alternative succeeds",
-        "OneOfChez fails if zero or multiple schemas validate",
-        "Error messages include details from all failed validation attempts",
-        "Composition schemas can be nested (AnyOf containing OneOf, etc.)",
-        "ValidationContext paths are preserved during alternative validation"
+        "✅ AnyOfChez validates if at least one schema alternative succeeds",
+        "✅ OneOfChez validates if exactly one schema alternative succeeds",
+        "✅ OneOfChez fails if zero or multiple schemas validate",
+        "✅ Error messages include details from all failed validation attempts",
+        "✅ Composition schemas can be nested (AnyOf containing OneOf, etc.)",
+        "✅ ValidationContext paths are preserved during alternative validation"
       ],
-      "successDefinition": "AnyOf and OneOf schemas enable union type validation with proper alternative checking and comprehensive error reporting",
+      "successDefinition": "✅ COMPLETED: AnyOf and OneOf schemas enable union type validation with proper alternative checking, comprehensive error reporting, and support for nested composition patterns",
       "outOfScope": [
         "Performance optimizations for many alternatives",
         "Short-circuit validation",
