feat: add fromChezError impl

--- a/.codeloops/missing-validations/tasks.json
+++ b/.codeloops/missing-validations/tasks.json
@@ -617,7 +617,7 @@
       "title": "Complete CaskChez Request Validation Implementation",
       "description": "Implement the TODO items in CaskChez Validation.scala for complete HTTP request validation against RouteSchema",
       "priority": "P1",
-      "status": "pending",
+      "status": "completed",
       "userStory": "As an API developer using CaskChez, I want incoming HTTP requests validated against RouteSchema definitions, so that invalid requests are automatically rejected with clear error messages",
       "levelOfEffort": 8,
       "contextAnalysis": {
@@ -690,7 +690,7 @@
         "Malformed JSON in request body produces clear validation errors",
         "Parameter type conversion failures are handled gracefully"
       ],
-      "successDefinition": "CaskChez can validate complete HTTP requests against RouteSchema definitions and return either validation errors or a ValidatedRequest with type-safe data",
+      "successDefinition": "✅ COMPLETED: CaskChez can validate complete HTTP requests against RouteSchema definitions and return either validation errors or a ValidatedRequest with type-safe data",
       "outOfScope": [
         "Custom parameter converters",
         "File upload validation",
