--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -12,8 +12,11 @@ align {
 }
 assumeStandardLibraryStripMargin = true
 
+rewrite.insertBraces.minLines = 2
+rewrite.insertBraces.allBlocks = true
+
 ## Line length
-maxColumn = 120
+maxColumn = 100
 
 ## Indentation
 continuationIndent {
