feat: add agent request metadata
scopes agent convesartions by optional scope key identifiers
-ex: tenantid -> userid -> conversation id

--- a/.xrelease.yml
+++ b/.xrelease.yml
@@ -19,8 +19,8 @@ release:
   # Release actions actions
   actions:
     - type: custom
-      name: "mill"
-      command: make assembly
+      name: "assembly"
+      command: "make assembly"
     - type: git-tag
     - type: commit-push
     - type: github-release
