refactor: consolidate OpenAI-compatible providers into unified architecture
- Remove redundant LMStudioProvider and CustomEndpointProvider classes
- Create unified OpenAICompatibleProvider with clean constructor API
- Eliminate ~95% code duplication between similar providers
- Replace multiple confusing factory methods with single clean interface
- Remove redundant examples and tests in favor of unified approach
- Update Makefile to use single example-unified command
- Maintain full backward compatibility for all OpenAI-compatible endpoints

The new API is much cleaner:
OpenAICompatibleProvider(baseUrl, modelId, strictModelValidation = false)

This replaces the previous redundant approaches:
- LMStudioProvider.forLMStudio(...)
- CustomEndpointProvider.forCustomEndpoint(...)
- OpenAICompatibleProvider.forLLamaCPP(...)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,10 @@ jobs:
           java-version: "23"
           distribution: "temurin"
 
+      # Install Mill build tool
+      - name: Make Assembly
+        run: make assembly
+
       # Configure Git user - if you want to use a different user, or leave as is to use the default git bot user
       - name: Configure Git
         run: |
