--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,3 @@
-
 version = "3.8.5"        # keep the formatter itself current
 
 ## Language
@@ -16,7 +15,11 @@ rewrite.insertBraces.minLines = 2
 rewrite.insertBraces.allBlocks = true
 
 ## Line length
-maxColumn = 100
+maxColumn = 120              # give it more room so `) derives ...` fits
+danglingParentheses {
+  callSite = true           # avoid aggressive line breaks around parens
+  defnSite = true
+}
 
 ## Indentation
 continuationIndent {
