chore: add lint step to ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,8 @@ jobs:
       - name: Compile
         run: make compile
 
+      - name: Lint for smells
+        run: make lint
+
       - name: Run tests
         run: make test
