fix: resolve HTTP client compatibility issues and enhance documentation
- Add Coursier installation to CI workflow for dependency management
- Force HTTP/1.1 in OpenAI compatible examples for Java 24 compatibility
- Enhance error reporting in Http11Client with detailed exception handling
- Expand CaskChezAgent documentation with comprehensive examples

Fixes connectivity issues with LM Studio and other OpenAI-compatible endpoints
by using HTTP/1.1 instead of HTTP/2 which has compatibility issues with Java 24.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,12 @@ jobs:
           java-version: "23"
           distribution: "temurin"
 
+      - name: Install Coursier
+        run: |
+          curl -fLo cs https://git.io/coursier-cli-linux
+          chmod +x cs
+          sudo mv cs /usr/local/bin/cs
+
       - name: Compile
         run: make compile
 
