--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,18 @@ jobs:
           java-version: "23"
           distribution: "temurin"
 
+      - name: Install Coursier
+        run: |
+          curl -fLo cs https://git.io/coursier-cli-linux
+          chmod +x cs
+          sudo mv cs /usr/local/bin/cs
+
       - name: Compile
         run: make compile
+
+      # skip for now, will revisit this
+      # - name: Lint for smells
+      #   run: make lint
 
       - name: Run tests
         run: make test
