fix: update CI workflow to use correct make commands
- Change 'make compile' to 'make build' to match Makefile
- This aligns with the pre-commit hook fix from earlier

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
           chmod +x cs
           sudo mv cs /usr/local/bin/cs
 
-      - name: Compile
-        run: make compile
+      - name: Build
+        run: make build
 
       # skip for now, will revisit this
       # - name: Lint for smells
