fix: trigger Maven publish on release created event
The gh CLI creates releases with the 'created' event type,
not 'published', so we need to listen for both events

--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -3,9 +3,9 @@ name: Publish to Maven Central
 on:
   # Manual trigger for testing
   workflow_dispatch:
-  # Automatically publish when a release is created
+  # Automatically publish when a release is created or published
   release:
-    types: [published]
+    types: [created, published]
 
 jobs:
   publish:
