feat: add better make cmds and organization

--- a/typescript-sdk/package.json
+++ b/typescript-sdk/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "openapi-ts": "openapi-ts"
+    "openapi-ts": "openapi-ts",
+    "demo": "tsx src/demo.ts"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@hey-api/openapi-ts": "^0.78.3"
+  },
+  "devDependencies": {
+    "tsx": "^4.19.2"
   }
 }
