--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Chez",
-  "version": "0.3.2",
+  "name": "boogieloops",
+  "version": "0.4.0",
   "type": "module",
   "scripts": {
     "test": "echo \"add your test command here\"",
